tests/ui/issues/issue-127011-1.stderr
error[E0425]: cannot find function `foo` in this scope
  --> $DIR/issue-127011-1.rs:8:5
   |
LL |     foo();
   |     ^^^ not found in this scope
   |
help: consider importing one of these functions
   |
LL + use crate::issue_127011_b_1::foo;
   |
LL + use issue_127011_a_1::foo;
   |
LL + use issue_127011_b_1::foo;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
